--- a/package/network/utils/iwinfo/Makefile
+++ b/package/network/utils/iwinfo/Makefile
@@ -11,9 +11,9 @@ PKG_RELEASE:=1
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_URL=$(PROJECT_GIT)/project/iwinfo.git
-PKG_SOURCE_DATE:=2025-10-19
-PKG_SOURCE_VERSION:=904f114548bac1e21f49f0bf1e16ebd8ac907885
-PKG_MIRROR_HASH:=f958de76179a202b46f8a2d19a637898b7549955badd347ed97a2961f6b1cb28
+PKG_SOURCE_DATE:=2025-11-07
+PKG_SOURCE_VERSION:=5f4c213fc59f1a82d9f0140642d668ae2969531b
+PKG_MIRROR_HASH:=skip
 PKG_MAINTAINER:=Jo-Philipp Wich <jo@mein.io>
 PKG_LICENSE:=GPL-2.0
 
