config/images: default y if USES_EXT4

--- a/config/Config-images.in
+++ b/config/Config-images.in
@@ -91,7 +91,7 @@ menu "Target Images"
 
 	menuconfig TARGET_ROOTFS_EXT4FS
 		bool "ext4"
-		default n if USES_EXT4
+		default y if USES_EXT4
 		help
 		  Build an ext4 root filesystem.
 
